--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,15 @@ server:
   port: 8080
 
 spring:
+  jackson:
+#    #参数意义：
+#    #JsonInclude.Include.ALWAYS              默认
+#    #JsonInclude.Include.NON_DEFAULT     属性为默认值不序列化
+#    #JsonInclude.Include.NON_EMPTY         属性为 空（””） 或者为 NULL 都不序列化
+#    #JsonInclude.Include.NON_NULL           属性为NULL   不序列化
+#    default-property-inclusion: ALWAYS
+#    date-format: yyyy-MM-dd HH:mm:ss
+#    time-zone: GMT+8
   datasource:
     url: jdbc:mysql://192.168.1.19:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: root
