--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,6 +27,9 @@ spring:
         max-idle: 8 # 连接池中的最大空闲连接
         min-idle: 0 # 连接池中的最小空闲连接
     timeout: 3000ms # 连接超时时间（毫秒）
+  elasticsearch:
+    rest:
+      uris: ["http://192.168.1.83:9200"]
 
 mybatis:
   mapper-locations:
@@ -47,3 +50,16 @@ jwt:
   secret: mySecret #JWT加解密使用的密钥
   expiration: 604800 #JWT的超期限时间(60*60*24)
   tokenHead: Bearer  #JWT负载中拿到开头
+
+# ElasticSearch 配置
+data:
+  elasticsearch:
+    repositories:
+      enabled: true
+    cluster-nodes: 192.168.1.83:9300 # es的连接地址及端口号
+    cluster-name: elasticsearch # es集群的名称
+
+management:
+  health:
+    elasticsearch:
+      enabled: false
