--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,6 +30,19 @@ spring:
   elasticsearch:
     rest:
       uris: ["http://192.168.1.83:9200"]
+  # ElasticSearch 配置
+  data:
+    elasticsearch:
+      client:
+        reactive:
+          endpoints: 192.168.1.83:9200
+      repositories:
+        enabled: true
+    # MongoDB配置
+    mongodb:
+      host: 192.168.1.19 # mongodb的连接地址
+      port: 27017 # mongodb的连接端口号
+      database: mall-port # mongodb的连接的数据库
 
 mybatis:
   mapper-locations:
@@ -51,15 +64,19 @@ jwt:
   expiration: 604800 #JWT的超期限时间(60*60*24)
   tokenHead: Bearer  #JWT负载中拿到开头
 
-# ElasticSearch 配置
-data:
-  elasticsearch:
-    repositories:
-      enabled: true
-    cluster-nodes: 192.168.1.83:9300 # es的连接地址及端口号
-    cluster-name: elasticsearch # es集群的名称
+## ElasticSearch 配置
+#data:
+#  elasticsearch:
+#    repositories:
+#      enabled: true
+#    cluster-nodes: 192.168.1.83:9300 # es的连接地址及端口号
+#    cluster-name: elasticsearch # es集群的名称
 
 management:
   health:
     elasticsearch:
       enabled: false
+    mongo:
+      enabled: false
+
+
